AC_INIT([mlm],
        [0.1],
        [https://github.com/canek-pelaez/mlm/issues],
        [mlm],
        [https://github.com/canek-pelaez/mlm])
AC_CONFIG_SRCDIR([src/gui/main.vala])

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([1.11 foreign no-dist-gzip dist-xz])
AM_SILENT_RULES([yes])
LT_INIT

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_CC_STDC
AM_PROG_VALAC([0.22])
AC_PROG_INSTALL

AC_PATH_PROG([GLIB_COMPILE_RESOURCES], [glib-compile-resources])
AC_PATH_PROG([XSLTPROC], [xsltproc])

have_manpages=no
AC_ARG_ENABLE(manpages, AS_HELP_STRING([--disable-manpages], [disable manpages]))
AS_IF([test "x${enable_manpages}" != xno], [have_manpages=yes])
AM_CONDITIONAL(ENABLE_MANPAGES, [test "x${have_manpages}" = "xyes" -a "x${XSLTPROC}" = x])

GDK_PIXBUF_PACKAGES=["--pkg gdk-pixbuf-2.0"]
PKG_CHECK_MODULES(GDK_PIXBUF, [ gdk-pixbuf-2.0 ])

AC_SUBST(GDK_PIXBUF_CFLAGS)
AC_SUBST(GDK_PIXBUF_LIBS)
AC_SUBST(GDK_PIXBUF_PACKAGES)

GEE_PACKAGES=["--pkg gee-0.8"]
PKG_CHECK_MODULES(GEE, [ gee-0.8 ])

AC_SUBST(GEE_CFLAGS)
AC_SUBST(GEE_LIBS)
AC_SUBST(GEE_PACKAGES)

GIO_PACKAGES=["--pkg gio-2.0"]
PKG_CHECK_MODULES(GIO, [ gio-2.0 ])

AC_SUBST(GIO_CFLAGS)
AC_SUBST(GIO_LIBS)
AC_SUBST(GIO_PACKAGES)

GLIB_PACKAGES=["--pkg glib-2.0"]
PKG_CHECK_MODULES(GLIB, [ glib-2.0 ])

AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)
AC_SUBST(GLIB_PACKAGES)

GSTREAMER_PACKAGES=["--pkg gstreamer-1.0"]
PKG_CHECK_MODULES(GSTREAMER, [ gstreamer-1.0 ])

AC_SUBST(GSTREAMER_CFLAGS)
AC_SUBST(GSTREAMER_LIBS)
AC_SUBST(GSTREAMER_PACKAGES)

GTK_PACKAGES=["--pkg gtk+-3.0"]
PKG_CHECK_MODULES(GTK, [ gtk+-3.0 ])

AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_PACKAGES)

ID3TAG_PACKAGES=["--pkg id3tag"]
PKG_CHECK_MODULES(ID3TAG, [ id3tag ])

AC_SUBST(ID3TAG_CFLAGS)
AC_SUBST(ID3TAG_LIBS)
AC_SUBST(ID3TAG_PACKAGES)

IT_PROG_INTLTOOL([0.40])

GETTEXT_PACKAGE=AC_PACKAGE_NAME
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [The name of the gettext domain])

AC_CONFIG_FILES([
	Makefile
        po/Makefile.in
])

AC_OUTPUT
